# apple-on-device-ai

./: .gitignore  .npmignore  BUILD_PROCESS.md  CHANGELOG.md  README.md  USAGE_EXAMPLE.md  build.sh  index.ts  package.json  tsconfig.build.json
.github/workflows/: ci.yml  release.yml
examples/: 01-basic-generation.ts  02-streaming.ts  03-object-generation.ts  04-comprehensive.ts  05-tool-calling.ts  06-structured-basic.ts  07-structured-zod-basic.ts  08-structured-zod-nested.ts  09-structured-zod-enum.ts  README.md  index.ts
native/: Cargo.toml  build.rs
native/src/: lib.rs
scripts/: release.sh
src/: apple-ai-chat-model.ts  apple-ai-provider.ts  apple-ai.swift  apple-ai.ts  index.ts  native-loader.ts
